--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             cp .env.example .env && \
             composer install --no-interaction && \
             php artisan key:generate && \
-            ./artisan migrate:refresh && \
+            ./artisan migrate:refresh
 
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
